the last test for html fıle

--- a/static/repo/akek/r/zaman-serileri-analizi/Hafta_1/Hafta_1_Uygulama.Rmd
+++ b/static/repo/akek/r/zaman-serileri-analizi/Hafta_1/Hafta_1_Uygulama.Rmd
@@ -17,6 +17,7 @@ output:
     toc_float:
       collapsed: yes
       smooth_scroll: yes
+    self_contained: true
   pdf_document:
     fig_caption: yes
     highlight: zenburn
