--- a/content/courses/zaman-serileri-analizi/4-lectures.Rmd
+++ b/content/courses/zaman-serileri-analizi/4-lectures.Rmd
@@ -33,7 +33,7 @@ outdated <- "no_entry"
 ## Hafta #1
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_1.pdf")`) `r emo::ji(tr)`
-- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.path, "/", "Hafta_1/", "Hafta_1_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+- [Uygulama - HTML](https://karaomer.bitbucket.io/akek/r/zaman-serileri-analizi/Hafta_1_Uygulama.html) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "/", "Hafta_1/", "Hafta_1_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [Data - `clean-water.xlsx`](`r paste0(zaman.serileri.analizi.r.path, "/", "Hafta_1/", "clean-water.xlsx")`)
     + [Data - `dam_occupancy.csv`](`r paste0(zaman.serileri.analizi.r.path, "/", "Hafta_1/", "dam_occupancy.csv")`)
