--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd
@@ -4,13 +4,16 @@ subtitle: "Hafta #1 - Uygulama"
 author: "[Dr. Ömer Kara](<mailto:okara@ogu.edu.tr>)"
 date: "`r format(Sys.time(), format = '%A, %B %d, %Y')`"
 output:
-  html_document: 
+  html_document:
     code_folding: show
+    df_print: paged
     fig_caption: yes
     highlight: zenburn
+    keep_md: no
     number_sections: yes
     theme: readable
     toc: yes
+    toc_depth: 3
     toc_float:
       collapsed: yes
       smooth_scroll: yes
