--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd
@@ -814,6 +814,8 @@ ggsdc(temp, aes(x = Date, y = y), frequency = frequency, method = "decompose", t
     theme_grey()
 ```
 
+## Çarpımsal Dekompozizasyon {#Multiplicative.Decomposition}
+
 ---
 
 <!-- ================================ SON ================================== -->
