--- a/content/courses/zaman-serileri-analizi/4-lectures.Rmd
+++ b/content/courses/zaman-serileri-analizi/4-lectures.Rmd
@@ -33,10 +33,10 @@ outdated <- "no_entry"
 ## Hafta #1
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_1.pdf")`) `r emo::ji(tr)`
-- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "/", "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
-    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "/", "Hafta_1/", "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
-    + [Data - `clean-water.xlsx`](`r paste0(zaman.serileri.analizi.r.path, "/", "Hafta_1/", "clean-water.xlsx")`)
-    + [Data - `dam_occupancy.csv`](`r paste0(zaman.serileri.analizi.r.path, "/", "Hafta_1/", "dam_occupancy.csv")`)
+- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+    + [Data - `clean-water.xlsx`](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "clean-water.xlsx")`)
+    + [Data - `dam_occupancy.csv`](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "dam_occupancy.csv")`)
 
 ## Hafta #2
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
