--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
@@ -96,7 +96,7 @@ Load.Install <- function(Package.Names, Quiet = FALSE, Update.All = FALSE) {
 ---
 
 # Hazırlık {#Preparation}
-## Paketler {#Packages}
+## Paketler {#Settings.Packages}
 - [R paketlerini](https://cran.r-project.org/web/packages/available_packages_by_name.html) `Load.Install` fonksiyonunu kullanarak indirin ve/veya yükleyin.
 ```{r Settings.Packages, cache = TRUE}
 # Devtools paketinin yüklenmesi
@@ -109,10 +109,19 @@ suppressWarnings(library("devtools"))
 Load.Install(c("rstudioapi", "readxl", "plyr", "dplyr", "tidyr", "stringr", "stringi", "Hmisc", "reshape2", "scales", "ggplot2", "xtable", "DT", "latex2exp", "forecast", "WDI", "fpp2", "fpp3", "datasets", "quantmod", "FinYang/tsdl", "ggseas", "slider", "ecm", "wooldridge", "dynlm", "car"))
 ```
 
-## Seed {#Seed}
+## Seed {#Settings.Seed}
 - Aşağıdaki `R kodu` bölümünde istediğiniz sayıyı girebilirsiniz.
 ```{r Settings.Seed}
 set.seed(1234)
+```
+
+## Çalışma Klasörü {#Settings.Working.Directory}
+- Aşağıdaki `R kodu`, R çalışma klasörünü (yani working directory) sadece bu dosya için, bu dosyanın bilgisayarınızda bulunan lokasyonunda belirliyor.
+    + `getwd()` fonksiyonunu kullanarak mevcut çalışma klasörünün hangi lokasyonda belirlendiğine bakabilirsiniz.
+```{r Settings.Working.Directory}
+# Değiştirmeyin.
+main.path <- dirname(rstudioapi::getActiveDocumentContext()$path) ## Bu kod otomatik olarak kaynak dosyasının, yani üzerinde çalıştığınız dosyanın, bilgisayarınızda hangi lokasyonda olduğunu buluyor.
+setwd(paste0(main.path, "/")) ## Yeni çalışma klasörü (yani working directory) bu kaynak dosyasının lokasyonunda belirleniyor.
 ```
 
 ----
@@ -121,7 +130,7 @@ set.seed(1234)
 - Bu bölümde zaman serileri analizi uygulamalarında yararlı olan ve SEKK Yöntemi ile kolayca tahmin edilebilen **iki basit zaman serisi modelinin** uygulaması gösterilecektir.
     + Statik Modeller
     + Sonlu Dağıtılmış Gecikme Modelleri (Finite Distributed Lag Models) - FDL Modelleri
-- Bu modellerin uygulamasi için [`wooldridge`](https://cran.r-project.org/web/packages/wooldridge/index.html) R paketinden direkt olarak veri indirip yüklemeye çalışalım.
+- Bu modellerin uygulaması için [`wooldridge`](https://cran.r-project.org/web/packages/wooldridge/index.html) R paketinden direkt olarak veri indirip yüklemeye çalışalım.
     + `wooldridge` R paketindeki verileri incelemek için [wooldridge CRAN klavuzunu](https://cran.r-project.org/web/packages/wooldridge/index.html) inceleyebilirsiniz.
     + Bu verilerin daha detayli bir gösterimi ve uygulama için ise [bu linke](https://justinmshea.github.io/wooldridge/index.html) bakabilirsiniz.
 - `wooldridge` R paketinde mevcut olan veriyi, verinin ismini kullanarak yüklemek için 1 fonksiyon kullanacağız: `data`.
@@ -160,11 +169,11 @@ str(data) ## Datanın yapısını inceleyelim.
 data ## Datanın yapısını inceleyelim.
 
 # Cari dönemde enflasyon ve işsizlik arasındaki statik model.
-model.1 <- lm(data = data, formula = inf ~ unem, singular.ok = TRUE)
+model.1 <- lm(data = data, formula = inf ~ unem, singular.ok = FALSE)
 summary(model.1)
 
 # İlk farklar enflasyon ve işsizlik arasındaki statik model.
-model.2 <- lm(data = data, formula = cinf ~ cunem, singular.ok = TRUE)
+model.2 <- lm(data = data, formula = cinf ~ cunem, singular.ok = FALSE)
 summary(model.2)
 ```
 
@@ -186,7 +195,7 @@ str(data) ## Datanın yapısını inceleyelim.
 data ## Datanın yapısını inceleyelim.
 
 # Cari dönemde faiz, enflasyon ve bütçe açığı arasındaki statik model.
-model <- lm(data = data, formula = i3 ~ inf + def, singular.ok = TRUE)
+model <- lm(data = data, formula = i3 ~ inf + def, singular.ok = FALSE)
 summary(model)
 ```
 
@@ -220,7 +229,7 @@ data <- phillips ## Yüklediğimiz datayı "data" ismi ile kaydediyoruz.
 data.ts <- ts(data, start = 1948) ## Data 1948 yılından itibaren başlamış.
 
 # Cari dönemde enflasyon ve işsizlik arasındaki statik model.
-model <- dynlm(data = data.ts, formula = inf ~ unem + L(unem, 1), singular.ok = TRUE)
+model <- dynlm(data = data.ts, formula = inf ~ unem + L(unem, 1), singular.ok = FALSE)
 summary(model)
 
 # Parametre tahminleri.
@@ -265,7 +274,7 @@ data ## Datanın yapısını inceleyelim.
 data.ts <- ts(data, start = 1913) ## Data 1913 yılından itibaren başlamış.
 
 # Model 1: Vergi muafiyeti ve doğurganlık arasındaki 2. dereceden FDL modeli.
-model.1 <- dynlm(data = data.ts, formula = gfr ~ pe + L(pe, 1) + L(pe, 2), singular.ok = TRUE)
+model.1 <- dynlm(data = data.ts, formula = gfr ~ pe + L(pe, 1) + L(pe, 2), singular.ok = FALSE)
 summary(model.1)
 
 # Model 1: Parametre tahminleri.
@@ -281,7 +290,7 @@ coef(model.1)[[2]] + coef(model.1)[[3]] + coef(model.1)[[4]]
 linearHypothesis(model.1, c("L(pe, 1) = 0", "L(pe, 2) = 0")) ## p-değeri %5 anlamlılık düzeyinden küçük olduğunda boş hipotez reddedilemez ve statik model kullanılmalıdır.
 
 # Model 2: Vergi muafiyeti ve doğurganlık arasındaki 2. dereceden FDL modeli.
-model.2 <- dynlm(data = data.ts, formula = gfr ~ pe + L(pe, 1) + L(pe, 2) + ww2 + pill, singular.ok = TRUE)
+model.2 <- dynlm(data = data.ts, formula = gfr ~ pe + L(pe, 1) + L(pe, 2) + ww2 + pill, singular.ok = FALSE)
 summary(model.2)
 
 # Model 2: Parametre tahminleri.
