--- a/content/courses/zaman-serileri-analizi/4-lectures.Rmd
+++ b/content/courses/zaman-serileri-analizi/4-lectures.Rmd
@@ -48,7 +48,10 @@ outdated <- "no_entry"
 
 ## Hafta #3
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_3.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_3.pdf")`) `r emo::ji(tr)`
+- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_3/", "Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+    + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_3/", "Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
 
 ## Hafta #4
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
