--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
@@ -127,12 +127,12 @@ setwd(paste0(main.path)) ## Yeni çalışma klasörü (yani working directory) b
 ----
 
 # Basit Zaman Serisi Modelleri {#Basic.Time.Series.Models}
-- Bu bölümde zaman serileri analizi uygulamalarında yararlı olan ve SEKK Yöntemi ile kolayca tahmin edilebilen **iki basit zaman serisi modelinin** uygulaması gösterilecektir.
+- Bu bölümde, zaman serileri analizi uygulamalarında yararlı olan ve SEKK Yöntemi ile kolayca tahmin edilebilen **iki basit zaman serisi modelinin** uygulaması gösterilecektir.
     + Statik Modeller
     + Sonlu Dağıtılmış Gecikme Modelleri (Finite Distributed Lag Models) - FDL Modelleri
 - Bu modellerin uygulaması için [`wooldridge`](https://cran.r-project.org/web/packages/wooldridge/index.html) R paketinden direkt olarak veri indirip yüklemeye çalışalım.
     + `wooldridge` R paketindeki verileri incelemek için [wooldridge CRAN klavuzunu](https://cran.r-project.org/web/packages/wooldridge/wooldridge.pdf) inceleyebilirsiniz.
-    + Bu verilerin daha detayli bir gösterimi ve uygulama için ise [bu linke](https://justinmshea.github.io/wooldridge/index.html) bakabilirsiniz.
+    + Bu verilerin daha detaylı bir gösterimi ve uygulama için ise [bu linke](https://justinmshea.github.io/wooldridge/index.html) bakabilirsiniz.
 - `wooldridge` R paketinde mevcut olan veriyi, verinin ismini kullanarak yüklemek için 1 fonksiyon kullanacağız: `data`.
     + `data` fonksiyonu ile istediğimiz veriyi verinin R paketi içindeki ismini kullanarak direkt olarak R'ın içine yükleyebiliriz.
 - Ayrıca, yüklediğimiz veri hakkında daha fazla bilgiye sahip olmak için, yani metadatasına ulaşmak için, `?` kodunu kullanabiliriz. Örneğin, `?wage1`:
@@ -149,11 +149,9 @@ setwd(paste0(main.path)) ## Yeni çalışma klasörü (yani working directory) b
 
 ### Statik Model (BDR) {#Static.Models.SLR}
 - Örnek olarak, `wooldridge` R paketinden `phillips` verisini yükleyelim.
-- `phillips` verisi genel olarak Amerika'daki **enflasyon ve işsizlik** değişkenlerini, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor.
+- `phillips` verisi genel olarak Amerika'daki **enflasyon ve işsizlik** değişkenlerini, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor. Örneğimizi basitleştirmek için biz sadece bazı değişkenleri kullanacağız.
     + inf ($inf_{t}$): cari dönem enflasyon oranı
     + unem ($unem_{t}$): cari dönem işsizlik oranı
-    + inf_1 ($inf_{t-1}$): 1. gecikme enflasyon oranı
-    + unem_1 ($unem_{t-1}$): 1. gecikme işsizlik oranı
     + cinf ($\Delta{inf_{t}} = inf_{t} - inf_{t-1}$): ilk farklar enflasyon oranı
     + cunem ($\Delta{unem_{t}} = unem_{t} - unem_{t-1}$): ilk farklar işsizlik oranı
 - Daha sonra yüklediğimiz bu verinin metadatasını ve yapısını inceleyelim.
@@ -170,11 +168,11 @@ data ## Datanın yapısını inceleyelim.
 
 # Cari dönemde enflasyon ve işsizlik arasındaki statik model.
 model.1 <- lm(data = data, formula = inf ~ unem, singular.ok = FALSE)
-summary(model.1)
+summary(model.1) ## Tahmin özeti.
 
 # İlk farklar enflasyon ve işsizlik arasındaki statik model.
 model.2 <- lm(data = data, formula = cinf ~ cunem, singular.ok = FALSE)
-summary(model.2)
+summary(model.2) ## Tahmin özeti.
 ```
 
 ### Statik Model (ÇDR) {#Static.Models.MLR}
@@ -182,7 +180,7 @@ summary(model.2)
 - `intdef` verisi genel olarak Amerika'daki **faiz oranı** ve alakalı değişkenleri, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor.
     + i3 ($i3_{t}$): cari dönem 3 aylık devlet tahvili faiz oranı
     + inf ($inf_{t}$): cari dönem enflasyon oranı
-    + def ($def_{t}$): cari dönem bütçe açığı
+    + def ($def_{t}$): cari dönem bütçe açığı (GSYH'ya oran olarak)
 - Daha sonra yüklediğimiz bu verinin metadatasını ve yapısını inceleyelim.
 - Son olarak yüklediğimiz veriyi kullanarak aşağıdaki modeli tahmin edelim.
     + Model: $i3_{t} = \beta_{0} + \beta_{1}inf_{t} + \beta_{2}def_{t} + u_{t}$
@@ -196,7 +194,7 @@ data ## Datanın yapısını inceleyelim.
 
 # Cari dönemde faiz, enflasyon ve bütçe açığı arasındaki statik model.
 model <- lm(data = data, formula = i3 ~ inf + def, singular.ok = FALSE)
-summary(model)
+summary(model) ## Tahmin özeti.
 ```
 
 ## FDL Modeli {#FDL.Models}
@@ -211,26 +209,25 @@ summary(model)
 
 ### FDL$_{(1)}$ {#FDL.Models.1}
 - Örnek olarak, `wooldridge` R paketinden `phillips` verisini yükleyelim.
-- `phillips` verisi genel olarak Amerika'daki **enflasyon ve işsizlik** değişkenlerini, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor.
+- `phillips` verisi genel olarak Amerika'daki **enflasyon ve işsizlik** değişkenlerini, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor. Örneğimizi basitleştirmek için biz sadece bazı değişkenleri kullanacağız.
     + inf ($inf_{t}$): cari dönem enflasyon oranı
     + unem ($unem_{t}$): cari dönem işsizlik oranı
-- Sonra yüklediğimiz bu verinin metadatasını ve yapısını inceleyelim.
-- Daha sonra olarak yüklediğimiz veriyi kullanarak aşağıdaki modeli tahmin edelim ve model tahminini kullanarak etki çarpanı ve uzun dönem çarpanı değerlerini hesaplayalım.
+    + unem_1 ($unem_{t-1}$): 1. gecikme işsizlik oranı
+- Daha sonra yüklediğimiz veriyi kullanarak aşağıdaki modeli tahmin edelim.
     + Model: $inf_{t} = \alpha_{0} + \delta_{0}unem_{t} + \delta_{1}unem_{t-1} + u_{t}$
-        * Etki çarpanı: $\delta_{0}$
-        * Uzun dönem çarpanı: $\delta_{0} + \delta_{1}$
-- Son olarak gecikmeli değişken parametre tahminlerinin istatistiki olarak anlamlı olup olmadığını hipotez testi ile test edelim: $H_{0}: \delta_{1} = 0$ (t-testi olduğuna dikkat edin)
-    + Eğer boş hipotez reddedilirse, FDL modeline ihtiyaç vardır. Aksi durumda statik model kullanılmalıdır.
-```{r FDL.Model.1}
+- Son olarak model tahminini kullanarak etki çarpanı ve uzun dönem çarpanı değerlerini hesaplayalım.
+    + Etki çarpanı: $\delta_{0}$
+    + Uzun dönem çarpanı: $\delta_{0} + \delta_{1}$
+```{r FDL.Models.1}
 data(phillips) ## Datayı yüklüyoruz.
 ?phillips ## Datanın metadatası.
 
 data <- phillips ## Yüklediğimiz datayı "data" ismi ile kaydediyoruz.
 data.ts <- ts(data, start = 1948) ## Data 1948 yılından itibaren başlamış.
 
-# Cari dönemde enflasyon ve işsizlik arasındaki statik model.
+# Model: Enflasyon ve işsizlik arasındaki FDL(1) modeli.
 model <- dynlm(data = data.ts, formula = inf ~ unem + L(unem, 1), singular.ok = FALSE)
-summary(model)
+summary(model) ## Tahmin özeti.
 
 # Parametre tahminleri.
 coef(model)
@@ -240,31 +237,28 @@ coef(model)[[2]]
 
 # Uzun dönem çarpanının hesaplanması.
 coef(model)[[2]] + coef(model)[[3]]
-
-# Test: \delta_{1} = 0
-linearHypothesis(model, c("L(unem, 1) = 0")) ## p-değeri %5 anlamlılık düzeyinden küçük olduğunda boş hipotez reddedilemez ve statik model kullanılmalıdır.
 ```
 
 ### FDL$_{(2)}$ {#FDL.Models.2}
 - Örnek olarak, `wooldridge` R paketinden `fertil3` verisini yükleyelim.
-- `fertil3` verisi genel olarak Amerika'daki **vergi muafiyeti ve doğurganlık oranı** değişkenlerini, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor.
+- `fertil3` verisi genel olarak Amerika'daki **vergi muafiyeti ve doğurganlık oranı** değişkenlerini, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor. Örneğimizi basitleştirmek için biz sadece bazı değişkenleri kullanacağız.
     + gfr ($gfr_{t}$): doğurganlık oranı (doğurganlık yaşındaki 1000 kadına düşen bebek sayısı)
     + pe ($pe_{t}$): çocuk sahibi olmayı özendirmek için getirilen vergi muafiyeti ($)
     + ww2 ($ww2_{t}$): 2. Dünya Savaşı yıllarını belirten kukla değişken (1941-1945 yılları için 1 diğer yıllar için 0)
     + pill ($pill_{t}$): doğum kontrol hapı kullanımının yasal olduğu yılları belirten kukla değişken (1963 ve sonrası için 1 diğer yıllar için 0)
 - Sonra yüklediğimiz bu verinin metadatasını ve yapısını inceleyelim.
-- Daha sonra olarak yüklediğimiz veriyi kullanarak aşağıdaki modelleri tahmin edelim ve model tahminlerini kullanarak etki çarpanı ve uzun dönem çarpanı değerlerini hesaplayalım.
+
+- Daha sonra yüklediğimiz veriyi kullanarak aşağıdaki modelleri tahmin edelim.
     + Model 1: $gfr_{t} = \alpha_{0} + \delta_{0}pe_{t} + \delta_{1}pe_{t-1} + \delta_{2}pe_{t-2} + u_{t}$
-        * Model 1'de denklemin sağ tarafında tek bir bağımsız değişken ve ona ait gecikme değerleri vardır.
-        * Etki çarpanı: $\delta_{0}$
-        * Uzun dönem çarpanı: $\delta_{0} + \delta_{1} + \delta_{2}$
     + Model 2: $gfr_{t} = \alpha_{0} + \delta_{0}pe_{t} + \delta_{1}pe_{t-1} + \delta_{2}pe_{t-2} + \beta_{1}ww2_{t} + \beta_{2}pill_{t} + u_{t}$
-        * Model 2'de denklemin sağ tarafında bir bağımsız değişken ve ona ait gecikme değerlerinin olmasının yanı sıra başka bağımsız değişkenler de vardır. Yani, modelde bağımlı değişkeni etkileyen diğer faktörler de kontrol edilmiştir.
+- Son olarak model tahminlerini kullanarak her model için etki çarpanı ve uzun dönem çarpanı değerlerini hesaplayalım.
+    + Model 1'de denklemin sağ tarafında tek bir bağımsız değişken ve ona ait gecikme değerleri vardır.
         * Etki çarpanı: $\delta_{0}$
         * Uzun dönem çarpanı: $\delta_{0} + \delta_{1} + \delta_{2}$
-- Son olarak gecikmeli değişken parametre tahminlerinin istatistiki olarak anlamlı olup olmadığını hipotez testi ile test edelim: $H_{0}: \delta_{1} = \delta_{2} = 0$ (F-testi olduğuna dikkat edin)
-    + Eğer boş hipotez reddedilirse, FDL modeline ihtiyaç vardır. Aksi durumda statik model kullanılmalıdır.
-```{r FDL.Model.2}
+    + Model 2'de denklemin sağ tarafında bir bağımsız değişken ve ona ait gecikme değerlerinin olmasının yanı sıra başka bağımsız değişkenler de vardır. Yani, modelde bağımlı değişkeni etkileyen diğer faktörler de kontrol edilmiştir.
+        * Etki çarpanı: $\delta_{0}$
+        * Uzun dönem çarpanı: $\delta_{0} + \delta_{1} + \delta_{2}$
+```{r FDL.Models.2}
 data(fertil3) ## Datayı yüklüyoruz.
 ?fertil3 ## Datanın metadatası.
 
@@ -275,7 +269,7 @@ data.ts <- ts(data, start = 1913) ## Data 1913 yılından itibaren başlamış.
 
 # Model 1: Vergi muafiyeti ve doğurganlık arasındaki 2. dereceden FDL modeli.
 model.1 <- dynlm(data = data.ts, formula = gfr ~ pe + L(pe, 1) + L(pe, 2), singular.ok = FALSE)
-summary(model.1)
+summary(model.1) ## Tahmin özeti.
 
 # Model 1: Parametre tahminleri.
 coef(model.1)
@@ -286,12 +280,9 @@ coef(model.1)[[2]]
 # Model 1: Uzun dönem çarpanının hesaplanması.
 coef(model.1)[[2]] + coef(model.1)[[3]] + coef(model.1)[[4]]
 
-# Test: \delta_{1} = \delta_{2} = 0
-linearHypothesis(model.1, c("L(pe, 1) = 0", "L(pe, 2) = 0")) ## p-değeri %5 anlamlılık düzeyinden küçük olduğunda boş hipotez reddedilemez ve statik model kullanılmalıdır.
-
 # Model 2: Vergi muafiyeti ve doğurganlık arasındaki 2. dereceden FDL modeli.
 model.2 <- dynlm(data = data.ts, formula = gfr ~ pe + L(pe, 1) + L(pe, 2) + ww2 + pill, singular.ok = FALSE)
-summary(model.2)
+summary(model.2) ## Tahmin özeti.
 
 # Model 2: Parametre tahminleri.
 coef(model.2)
@@ -301,9 +292,6 @@ coef(model.2)[[2]]
 
 # Model 2: Uzun dönem çarpanının hesaplanması.
 coef(model.2)[[2]] + coef(model.2)[[3]] + coef(model.2)[[4]]
-
-# Test: \delta_{1} = \delta_{2} = 0
-linearHypothesis(model.2, c("L(pe, 1) = 0", "L(pe, 2) = 0")) ## p-değeri %5 anlamlılık düzeyinden küçük olduğunda boş hipotez reddedilemez ve statik model kullanılmalıdır.
 ```
 
 <!-- ================================ SON ================================== -->
