--- a/content/courses/ekonometrik-modelleme/4-lectures.Rmd
+++ b/content/courses/ekonometrik-modelleme/4-lectures.Rmd
@@ -33,22 +33,22 @@ outdated <- "no_entry"
 ## Hafta #1
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_1.pdf")`) `r emo::ji(tr)`
-- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
-    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
-    + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html")`) `r emo::ji(tr)`
+    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd")`) `r emo::ji(tr)`
+    + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.R")`) `r emo::ji(tr)`
     + [Data - `clean-water.xlsx`](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "clean-water.xlsx")`)
     + [Data - `dam_occupancy.csv`](`r paste0(zaman.serileri.analizi.r.path, "Hafta_1/", "dam_occupancy.csv")`)
 
 ## Hafta #2
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_2.pdf")`) `r emo::ji(tr)`
-- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
-    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_2/", "Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
-    + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_2/", "Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html")`) `r emo::ji(tr)`
+    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_2/", "Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd")`) `r emo::ji(tr)`
+    + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_2/", "Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.R")`) `r emo::ji(tr)`
 
 ## Hafta #3
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_3.pdf")`) `r emo::ji(tr)`
+- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_3.pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
 - [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_3/", "Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_3/", "Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
@@ -56,11 +56,20 @@ outdated <- "no_entry"
 ## Hafta #4
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_4.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_4/", "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+    + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_4/", "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ## Hafta #5
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Slaytlar](`r paste0(ekonometrik.modelleme.path, "Ekonometrik Modelleme_-_Hafta_5.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Slaytlar](`r paste0(ekonometrik.modelleme.path, "Ekonometrik_Modelleme_-_Hafta_5.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Uygulama - HTML](`r paste0(ekonometrik.modelleme.r.link, "Ekonometrik_Modelleme_-_Hafta_5_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+    + [Uygulama - RMarkdown](`r paste0(ekonometrik.modelleme.r.path, "Hafta_5/", "Ekonometrik_Modelleme_-_Hafta_5_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+    + [Uygulama - R](`r paste0(ekonometrik.modelleme.r.path, "Hafta_5/", "Ekonometrik_Modelleme_-_Hafta_5_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ## Hafta #6
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Slaytlar](`r paste0(ekonometrik.modelleme.path, "Ekonometrik Modelleme_-_Hafta_6.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Slaytlar](`r paste0(ekonometrik.modelleme.path, "Ekonometrik_Modelleme_-_Hafta_6.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Uygulama - HTML](`r paste0(ekonometrik.modelleme.r.link, "Ekonometrik_Modelleme_-_Hafta_6_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+    + [Uygulama - RMarkdown](`r paste0(ekonometrik.modelleme.r.path, "Hafta_6/", "Ekonometrik_Modelleme_-_Hafta_6_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+    + [Uygulama - R](`r paste0(ekonometrik.modelleme.r.path, "Hafta_6/", "Ekonometrik_Modelleme_-_Hafta_6_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(in.progress)`
